# bidding-platform

./: Cargo.toml
src/: contract.rs  error.rs  lib.rs  msg.rs  multitest.rs  state.rs
src/contract/: exec.rs
src/multitest/: tests.rs
