[package]
name = "bidding-platform"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
library = []
tests = ["library", "cw-multi-test"]

[dependencies]
cosmwasm-std = "1.1"
serde = "1.0.0"
cw-storage-plus = "0.15.0"
thiserror = "1.0.0"
schemars = "0.8"
cosmwasm-schema = "1.1"
cw-multi-test = {version = "0.15.0", optional = true}
cw2 = "0.14.0"

[dev-dependencies]
cw-multi-test = "0.15.0"
